...

    <string name="login_fragment_label">Login</string>
    <string name="game_fragment_label">Tic Tac Toe: Game</string>
    <string name="dashboard_fragment_label">Tic Tac Toe: Dashboard</string>

    <string name="login">Log In</string>
    <string name="logout">Log Out</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="blank"> </string>

...
