...
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/list_of_open_games"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/txt_open_games"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fab_new_game" />

    <!-- Floating Action Button for creating a new game -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
